2016-08-28  Emanuele Giaquinta  <emanuele.giaquinta@gmail.com>  (tiny change)

	* util/texi2dvi (cleanup): Fix cleanup for "clean" build mode.  
	Bug introduced on 2016-05-03.

2016-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\entry): Disable output of marks for whole 
	entry, instead of just for the page number.  This is intended to 
	prevent an infinite loop in \ourunvbox when @uref is used in an 
	index entry (reported by Karl Berry for latex refman manual).

2016-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention gnulib import in XSParagraph subdirectory.

2016-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.1.90

2016-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Document encoding): Test glyph 
	commands in section title.

2016-08-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\indexnofonts): Eat the {} following glyph 
	commands, and add definitions for \atchar, \lbracechar and 
	\rbracechar.
	(\definedummies): Add dummy for @atchar.
	* doc/texinfo-tex-test.texi (Document encoding): Test some glyph 
	commands in section title.

2016-08-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\balancecolumns): When making bottoms of the 
	two columns flush, use \unskip to remove glue from bottom of 
	columns.  Remove code which ignored glue at the bottom of 
	columns when balancing columns, because this glue was there to 
	help to break before an index initial.

	* doc/texinfo-tex-test.texi
	(Final page initial at top of both columns): New example of 
	index formatting.
	(Short indices): Add text saying what to look at for short 
	indices.
	(\commenceindex, \finishindex): Move use of \smallfonts in order 
	not to cancel the change to \baselineskip done in 
	\begindoublecolumns.

2016-08-08  Masamichi Hosoda  <trueroad@trueroad.jp>

	* doc/texinfo.tex (\setpdfdestname): New macro for XeTeX.
	(\pdfdestname): Escaped PDF destination name